<resources>
    <string name="app_name">FitApp</string>
    <string name="donation_message">Would you like to donate to the developer so he can buy protein and creatine?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_item_exercises">Exercises</string>
    <string name="menu_item_my_workouts">My Workouts Plan</string>
    <string name="menu_item_add_exercise">Add Custom Exercise</string>
    <string name="menu_item_progress">Progress</string>
    <string name="menu_item_diet">Diet</string>
    <string name="ac_ma_me_it_TextView_text">Enter text</string>
    <string name="ac_ma_me_it_ImageView_contentDescription">Image of RecView item</string>
    <string name="chest_exercise">Chest</string>
    <string name="shoulders_exercise">Shoulders</string>
    <string name="biceps_exercise">Biceps</string>
    <string name="triceps_exercise">Triceps</string>
    <string name="forearms_exercise">Forearms</string>
    <string name="back_exercise">Back</string>
    <string name="abs_exercise">Abs</string>
    <string name="legs_exercise">Legs</string>
    <string name="calves_exercise">Calves</string>
    <string name="quads_exercise">Quads</string>
    <string name="glutes_exercise">Glutes</string>
    <string name="hamstrings_exercise">Hamstrings</string>
</resources>