<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateActivity">

    <TextView
        android:id="@+id/id_ac_ma_TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/donation_message"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/id_ac_ma_TextView1">

        <Button
            android:id="@+id/id_ac_ma_Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Button1"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_ac_ma_TextView1"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/id_ac_ma_Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Button2"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_ac_ma_TextView1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>